K8S/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app

spec:
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend-app
        image: thanhlam2k4/microservice-fe
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend-app
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
