K8S/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-micro-dp
  namespace: micro-dev
spec:
  selector:
    matchLabels:
      app: mysql-micro-dp
  template:
    metadata:
      labels:
        app: mysql-micro-dp
    spec:
      containers:
      - name: myapp
        image: thanhlam2k4/mysql-pre-schema
        volumeMounts:
          - name: mysql-data
            mountPath: var/lib/mysql   
        resources:
          limits:
            memory: "582Mi"
            cpu: "500m"
        ports:
        - containerPort: 3306


---
apiVersion: v1
kind: Service
metadata:   
  name: mysql-micro-svc
  namespace: micro-dev
spec:
  selector:
    app: mysql-micro-dp
  ports:
  - port: 3306
  type: LoadBalancer

# volumes:
#   - name: mysql-data
#     persistentVolumeClaim:
#       claimName:
